1. options for representation-dependent problem: new W-representation (Lagranian-based Coulomb correction) is added for discussion; 2. information output is explicitly controlled in the configure file; 3. too-close-to-core situation is raised, which may cause high-order term which spoil the spectra; one can control the radius-threshold to discard trajectories which are too close to the core, to somewhat alleviate the rampant artificial higher-order caustics, and to significantly speed up the computation

--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-
-TCSFA is Trajectory-Corrected Strong Field Approximation. The motivative is to incorporates Coulomb effect into the well-known strong field approximation. The model proves a powerful theoretical model to describe the behavior of photoelectron(s) in strong light field in an unpertubative way.
+TCSFA is Trajectory-based Coulomb-corrected Strong Field Approximation. It incorporates long-range Coulomb effects into the well-known theoretical framework of strong field approximation (SFA) established during 1960s by Keldysh. Compared with many other varieties taking binding potential into consideration, the TCSFA is developed in terms of the conceptually simple "quantum orbits", akin to the method of Feynman's path integrals. This method provides a powerful theoretical tool to analyze momentum spectra for strong field ionization of photo-electron(s) in the unperturbative domain.
